--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="hero is-dark is-fullheight">
     <div class="hero-body">
-        <div class="section">
+        <div class="container">
             <h1 class="title">
                 Comp426
             </h1>
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="content">
             <h1 class="title">CSS Frameworks</h1>
-            <h5 class="subtitle has-text-grey has-text-weight-normal">How to use a framework effectively</h5>
+            <h5 class="subtitle has-text-grey">How to use a framework effectively</h5>
             <p>
 	    	When it comes to developing websites, design can be a very fun aspect.
 		But in reality we often don't want to spend hours writing CSS.
@@ -115,7 +115,7 @@
         </div>
     </div>
 </section>
-<section class="section">
+<section class="section has-background-white">
     <div class="container">
         <div class="content">
             <div class="columns">
